--- a/css/style.css
+++ b/css/style.css
@@ -7,9 +7,18 @@ body {
     background-color: #3e4c84;
     text-align: left;
 	font-size: 20px;
-	font-family: monospace;
+	font-family: 'Rokkitt', serif;
 	color: white;
 	font-style: bold;
 	padding-top: 70px;
 }
 div.caption {font-size: 30px;}
+
+.newsitem {margin-left: 20px}
+
+.row2 {
+	height: 219px !important;
+	width: 219px !important;
+	display: block !important;
+	max-width: 100% !important;
+}
